import "msgenum";

message SnakeMsg {
  required int32 snakeId = 1; //蛇的ID
  required CoordinateXY snakePosition = 2; //蛇头的坐标
  optional float snakeSpeed = 3; //蛇的速度
  optional int32 snakeLength = 4; //蛇的长度
  required int32 snakeDirection = 5; //蛇的行进方向
  required SNAKE_STATUS snakeStatus = 6; //蛇的状态
  repeated CoordinateXY snakeBodyPosition = 7[packed=true];
}

message FoodMsg {
  required int32 foodId = 1; //食物Id
  required int32 foodType = 2; //食物类型
  required CoordinateXY foodPosition = 3; //食物的初始坐标
}

message CoordinateXY { //坐标点
  required float coordinateX = 1; //横坐标
  required float coordinateY = 2; //纵坐标
}